Introduces custom index; Must fix selection and loci.

--- a/projects/demo-showcase/src/app/page-sequence-viewer/page-sequence-viewer.component.html
+++ b/projects/demo-showcase/src/app/page-sequence-viewer/page-sequence-viewer.component.html
@@ -1,7 +1,6 @@
 <div class="container pt-3">
-  <h1>Sequence viewer</h1>
-  <!-- Test sequence viewer -->
-  <div class="mb-3">
-    <ngx-sequence-viewer [fasta]="fasta" [split]="split" [loci]="loci"></ngx-sequence-viewer>
-  </div>
+  <!-- First section: multiple seqeucne alignment -->
+  <!-- <app-multiple-sequence-alignment></app-multiple-sequence-alignment> -->
+  <!-- Second section: single sequence viewer -->
+  <app-single-sequence-viewer></app-single-sequence-viewer>
 </div>
