Introduces chunks split. Fixes style update on selection.

--- a/projects/demo-showcase/src/app/page-sequence-viewer/page-sequence-viewer.component.html
+++ b/projects/demo-showcase/src/app/page-sequence-viewer/page-sequence-viewer.component.html
@@ -1,6 +1,6 @@
 <div class="container pt-3">
   <!-- First section: multiple seqeucne alignment -->
-  <!-- <app-multiple-sequence-alignment></app-multiple-sequence-alignment> -->
+  <app-multiple-sequence-alignment></app-multiple-sequence-alignment>
   <!-- Second section: single sequence viewer -->
   <app-single-sequence-viewer></app-single-sequence-viewer>
 </div>
