--- a/projects/demo-showcase/src/styles.scss
+++ b/projects/demo-showcase/src/styles.scss
@@ -30,6 +30,7 @@
 @import "bootstrap/scss/badge";
 @import "bootstrap/scss/card";
 @import "bootstrap/scss/dropdown";
+@import "bootstrap/scss/placeholders";
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "bootstrap/scss/utilities/api";
