Fixes indes in sequence viewer; Updates structure viewer; Updates preview images.

--- a/projects/demo-showcase/src/app/page-home/page-home.component.html
+++ b/projects/demo-showcase/src/app/page-home/page-home.component.html
@@ -16,7 +16,8 @@
                   <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                   <a href="#" class="btn btn-primary">Go somewhere</a> -->
                     <!-- Image -->
-                    <img src="assets/structure-viewer.png" class="w-100 h-auto" alt="Structure viewer">
+                    <img src="assets/ngx-structure-viewer-light.png" class="w-100 h-auto light-only" alt="Structure viewer, light mode">
+                    <img src="assets/ngx-structure-viewer-dark.png" class="w-100 h-auto dark-only" alt="Structure viewer, dark mode">
                     <!-- Description -->
                     <p class="card-text">
                         Visualize and interact with 3D molecular structures.
@@ -42,7 +43,8 @@
                   <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                   <a href="#" class="btn btn-primary">Go somewhere</a> -->
                     <!-- Image -->
-                    <img src="assets/features-viewer.png" class="w-100 h-auto" alt="Features viewer">
+                    <img src="assets/ngx-features-viewer-light.png" class="w-100 h-auto dark-only" alt="Features viewer, light mode">
+                    <img src="assets/ngx-features-viewer-dark.png" class="w-100 h-auto light-only" alt="Features viewer, dark mode">
                     <!-- Description -->
                     <p class="card-text">
                         The ultimate tool for Angular developers who want to visualize and interact
@@ -65,7 +67,8 @@
                 </h2>
                 <div class="card-body">
                     <!-- Image -->
-                    <img src="assets/sequence-viewer.png" class="w-100 h-auto" alt="Sequence viewer">
+                    <img src="assets/ngx-sequence-viewer-light.png" class="w-100 h-auto light-only" alt="Sequence viewer">
+                    <img src="assets/ngx-sequence-viewer-dark.png" class="w-100 h-auto dark-only" alt="Sequence viewer">
                     <!-- Description -->
                     <p class="card-text">
                         Angular native component for single sequences or multiple sequence alignments.
