--- a/projects/ngx-sequence-viewer/src/lib/ngx-sequence-viewer.component.scss
+++ b/projects/ngx-sequence-viewer/src/lib/ngx-sequence-viewer.component.scss
@@ -145,6 +145,9 @@
     .position:last-child .placeholder.index {
       // Show only last index
       display: block;
+      // Unset opacity
+      opacity: unset;
+      background: inherit;
     }
   }
 
