Minor update to home page. Introduces home page module.

--- a/projects/demo-showcase/src/app/page-home/page-home.component.html
+++ b/projects/demo-showcase/src/app/page-home/page-home.component.html
@@ -19,7 +19,7 @@
                     <img src="assets/ngx-structure-viewer-light.png" class="w-100 h-auto light-only" alt="Structure viewer, light mode">
                     <img src="assets/ngx-structure-viewer-dark.png" class="w-100 h-auto dark-only" alt="Structure viewer, dark mode">
                     <!-- Description -->
-                    <p class="card-text">
+                    <p class="card-text mt-1">
                         Visualize and interact with 3D molecular structures.
                         Provides Mol* functionalities out-of-the-box for Angular developers.
                     </p>
@@ -46,7 +46,7 @@
                     <img src="assets/ngx-features-viewer-light.png" class="w-100 h-auto dark-only" alt="Features viewer, light mode">
                     <img src="assets/ngx-features-viewer-dark.png" class="w-100 h-auto light-only" alt="Features viewer, dark mode">
                     <!-- Description -->
-                    <p class="card-text">
+                    <p class="card-text mt-1">
                         The ultimate tool for Angular developers who want to visualize and interact
                         biological sequences and their features.
                     </p>
@@ -70,7 +70,7 @@
                     <img src="assets/ngx-sequence-viewer-light.png" class="w-100 h-auto light-only" alt="Sequence viewer">
                     <img src="assets/ngx-sequence-viewer-dark.png" class="w-100 h-auto dark-only" alt="Sequence viewer">
                     <!-- Description -->
-                    <p class="card-text">
+                    <p class="card-text mt-1">
                         Angular native component for single sequences or multiple sequence alignments.
                         Does not require any third party library.
                     </p>
