Fix trace update and tooltip position

--- a/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.html
+++ b/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.html
@@ -49,7 +49,7 @@
         <!-- Tooltip template -->
         <ng-template let-trace="trace" let-feature="feature" let-index="index" let-coordinates="coordinates"
                      ngx-features-viewer-tooltip>
-          <div>
+          <div class="tooltipOuter">
             {{ feature.label }}
           </div>
 
