--- a/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.scss
+++ b/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.scss
@@ -4,3 +4,18 @@ ngx-features-viewer {
     --locus-hover-outline: 2px outset #00ffa0;
     --locus-hover-border-radius: 4px;
 }
+
+.tooltipOuter {
+
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 4px;
+    border-color: rgb(255, 255, 255);
+    white-space: nowrap;
+
+    box-shadow: rgba(0, 0, 0, 0.2) 1px 2px 10px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(102, 102, 102);
+    font: 14px / 21px sans-serif;
+    padding: 10px;
+}
