Add automatic expansion of traces
test

test

Fix auto expansion

test

--- a/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.html
+++ b/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.html
@@ -172,6 +172,8 @@
   'content-size': number;
   'line-height': number;
 
+  'expanded': boolean; // Define if the trace is expanded or not (default is false), only works if the trace has nested traces
+
   // Define margins between traces
   'margin-top': number;
   'margin-bottom': number;
