--- a/projects/demo-showcase/src/app/page-structure-viewer/page-structure-viewer.component.html
+++ b/projects/demo-showcase/src/app/page-structure-viewer/page-structure-viewer.component.html
@@ -1,34 +1,32 @@
 <div class="container placeholder-glow pt-3">
-    <!-- Section: introduction -->
-    <div class="mb-3">
-        <h1>Structure viewer</h1>
-        <p>
-            The <b>ngx-structure-viewer</b> is a Mol* wrapper for Angular. It is a viewer for molecular structures and
-            can be used to visualize and interact with 3D molecular structures. It works out of the box with the latest
-            releases of Angular and automatized the most common features of Mol*.
-        </p>
-    </div>
-    <!-- TODO Remove this -->
-    <div class="row">
-        <!-- Sequence viewer -->
-        <div class="col-6">
-            <!-- Define squared container -->
-            <div class="position-relative overflow-hidden squared rounded">
-                <!-- Define placeholder -->
-                <div class="position-absolute left-0 top-0 w-100 h-100 placeholder"></div>
-                <!-- Define the viewer -->
-                <ngx-structure-viewer [loci]="loci" [settings]="settings$ | async" [source]="{
-                    link: 'https://files.rcsb.org/download/1crn.pdb',
-                    format: 'pdb',
-                    type: 'remote',
-                    label: '1CRN',
-                    binary: false
-                }"></ngx-structure-viewer>
-        </div>
-        <!-- Change settings -->
-        <div class="col-3">
-            <!--  -->
-        </div>
+  <!-- Section: introduction -->
+  <div class="mb-3">
+    <h1>Structure viewer</h1>
+    <p>
+      The <b>ngx-structure-viewer</b> is a Mol* wrapper for Angular. It is a viewer for molecular structures and
+      can be used to visualize and interact with 3D molecular structures. It works out of the box with the latest
+      releases of Angular and automatized the most common features of Mol*.
+    </p>
+  </div>
+  <!-- TODO Remove this -->
+  <div class="row">
+    <button class="btn btn-primary" (click)="changeSource()">
+      Change source
+    </button>
+    <!-- Sequence viewer -->
+    <div class="col-6">
+      <!-- Define squared container -->
+      <div class="position-relative overflow-hidden squared rounded">
+        <!-- Define placeholder -->
+        <div class="position-absolute left-0 top-0 w-100 h-100 placeholder"></div>
+        <!-- Define the viewer -->
+        <ngx-structure-viewer [loci]="loci" [settings]="settings$ | async"
+                              [source]="source$ | async"/>
+      </div>
+      <!-- Change settings -->
+      <div class="col-3">
+        <!--  -->
+      </div>
     </div>
     <!-- Section: choose sources -->
     <!-- <app-section-sources></app-section-sources> -->
@@ -38,5 +36,5 @@
     <!-- <app-section-interactions></app-section-interactions> -->
     <!-- Section: show highlights -->
     <!-- <app-section-highlights></app-section-highlights> -->
+  </div>
 </div>
-    
